# mgnn

./: README.md  install.sh  main.py  pyproject.toml
src/mgnn/: __init__.py  __main__.py  config_manager.py  data_manager.py
src/mgnn/analysis/: __init__.py  eda.py  results_summary.py  shap_analysis.py
src/mgnn/data/: __init__.py  features.py  graph_augmentation.py  graph_builder.py  loader.py
src/mgnn/features/: __init__.py  atom_features.py  composition_features.py  enhanced_features.py  graph_constructor.py
src/mgnn/inverse/: __init__.py  genetic_algorithm.py  structure_generator.py
src/mgnn/models/: __init__.py  calibration.py  cgcnn.py  ensemble.py  losses.py  trainer.py  uncertainty.py
src/mgnn/workflows/: __init__.py  augmented_training.py  calibration.py  ensemble_training.py  ensemble_uncertainty.py  exploratory_analysis.py  feature_engineering.py  improved_training.py  inverse_design.py  model_training.py  shap_analysis.py  test_data_loader.py  uncertainty_analysis.py
workflows/: 01_data_preparation.inp  test_01_loader.inp
