[project]
name = "multinary-gnn"
version = "0.1.0"
description = "Graph Neural Network for Multinary Perovskite Oxide Discovery"
authors = [
    {name = "Anand Sahu", email = "anandsahuofficial@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "pymatgen>=2023.10.0",
    "matminer>=0.9.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "h5py>=3.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "shap>=0.42.0",
    "umap-learn>=0.5.3",
    "ase>=3.22.0",
    "cairosvg>=2.7.0",
    "tqdm>=4.65.0",
    "mpcontribs-client==5.10.4",
    "pillow>=10.0.0",
   
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]


[tool.hatch.build.targets.wheel]
packages = ["src/mgnn"]

[project.scripts]
mgnn = "mgnn.__main__:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]
